added midi and osc indicators

--- a/webfolder/start.html
+++ b/webfolder/start.html
@@ -71,6 +71,10 @@
               </div>
           </form>
           </div>
+          <div class="col-md-3">
+            <label>Incoming MIDI: </label><span class="dot" id="midi_indicator" style="margin-left:2%;margin-right:2%;"></span> Outgoing OSC: <span class="dot" id="osc_indicator" style="margin-left:2%;margin-right:2%;"></span>
+            
+          </div>
           <!--<div class="col-md-3">
               <form class="navbar-form navbar-right form-inline">
                   <div class="form-group">
